[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Main/LoginScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/Thin Pencil Handwriting.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 3
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 3
font_data = ExtResource( 2 )

[node name="LoginScreen" type="Node"]
script = ExtResource( 1 )

[node name="Title" type="Label" parent="."]
margin_left = 296.0
margin_top = 392.0
margin_right = 711.0
margin_bottom = 506.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Welcome"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoginButton" type="TextureButton" parent="."]
modulate = Color( 0.909804, 0.988235, 0, 1 )
margin_left = 616.0
margin_top = 1072.0
margin_right = 680.0
margin_bottom = 1136.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LoginButton"]
margin_left = -248.0
margin_top = -40.0
margin_right = -61.0
margin_bottom = 74.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Login"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewAccountButton" type="TextureButton" parent="."]
modulate = Color( 0, 0.709804, 0.988235, 1 )
margin_left = 616.0
margin_top = 1488.0
margin_right = 680.0
margin_bottom = 1552.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NewAccountButton"]
margin_left = -248.0
margin_top = -40.0
margin_right = -61.0
margin_bottom = 74.0
custom_colors/font_color = Color( 0, 1, 0.741176, 1 )
custom_colors/font_outline_modulate = Color( 0, 0.529412, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "New Account"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="NewAccountButton" to="." method="_on_NewAccountButton_pressed"]
